# spark-stuctured-streaming-test

./: README.md  pyproject.toml
.github/workflows/: validate.yml
pipeline/: pipeline.py
test_data/: data.json
tests/: test_pipeline.py
