[tool.poetry]
name = "spark-stuctured-streaming-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "*"
flake8 = "*"
coverage = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
